tests/ui/borrowck/issue-150320-suggest-field-reordering.stderr
error[E0382]: borrow of moved value: `a`
  --> $DIR/issue-150320-suggest-field-reordering.rs:13:16
   |
LL |     fn new(a: String) -> Self {
   |            - move occurs because `a` has type `String`, which does not implement the `Copy` trait
LL |         Self {
LL |             a,
   |             - value moved here
LL |             b: a.len(),
   |                ^ value borrowed here after move
   |
help: consider initializing `b` before `a`
   |
LL ~             b: a.len(),
LL ~             a,
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |             a: a.clone(),
   |              +++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
